# kodawari

./: .gitignore  .gitleaks.toml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  STABILITY.md  pyproject.toml  sitecustomize.py  项目说明.md
docs/: ARCHITECTURE_FLOW.zh-CN.md  CAPABILITY_MAP.md  DESKTOP_DISTRIBUTION.md  OPERATOR_RUNBOOK.md  PIPELINE_DEEP_DIVE.md  PIPELINE_DEEP_DIVE.zh-CN.md  QUICKSTART.md  README.md  USER_GUIDE.md  WRITING_PRD.md  WRITING_PRD.zh-CN.md
scripts/: bootstrap_kodawari.ps1  cli_fork_scan.py  compile_adapter_policies.py  extract_workflow_bug_report.py  freeze_v2_baseline.py  generate_evidence_bundle.py  invoke_test_lane.ps1  kodawari.ps1  make_cli_shims.py  metrics_baseline.py  release_audit.py  render_dynamic_baseline_docs.py  run_always_on_lane.ps1  run_always_on_lane_repeat.ps1  run_integration_lane.ps1  run_integration_lane_repeat.ps1  run_lane_stability.ps1  security_scan.ps1  snapshot_code_health.py  test_lane_recipes.json  update_code_health_baseline.py  verify_heavy_chain.py
tests/: __init__.py  _tmp_local_adapter_test.txt  conftest.py  generic_canary_support.py  test_action_semantics_migration.py  test_adapter_facades.py  test_approval_engine.py  test_approve_cmd.py  test_artifact_schema_present.py  test_autopilot_autodrive_decisions.py  test_autopilot_cli_boundary.py  test_autopilot_cmd.py  test_autopilot_codex_cli_smoke.py  test_autopilot_contract_bridge_next_task.py  test_autopilot_decision_runtime.py  test_autopilot_engine.py  test_autopilot_fullchain.py  test_cli.py  (+208 more)
(+576 files in other folders)
